@@ -1,3 +1,9 @@
+2006-01-20 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/jfs.cc: small fix with sequence of mount,remount,unmount
+	* src/xfs.cc: resizing now contains detailed feedback
+	* src/FileSystem.cc: show exceptiondescription in operationdetails
+	
 2006-01-19 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/jfs.cc: resizing now contains detailed feedback 
